# Vibe-DB

./: .cursorrules  .gitignore  AGENTS.md  AGENT_CONTEXT.md  AI_CO_AUTHORS.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  STYLE_GUIDE.md  index.html  package.json  skills-lock.json  tailwind.config.js  vite.config.ts
.agents/workflows/: performance-rules.md
.github/release-notes/: v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.3.0.md  v0.4.0.md
.github/workflows/: refresh-release-notes.yml  release.yml  rust-tests.yml
changelog/: v0.2.0.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.2.8.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.4.10.md  v0.4.11.md  v0.4.2.md  v0.4.6.md  v0.4.7.md  v0.4.8.md
docs/: global-quick-search.md  save query.md  schema-visualization.md
scripts/: bump-version.sh  generate-latest-json.mjs  generate-release-notes.mjs  generate-signing-keys.sh
src/: App.tsx  index.css  index.css.bak
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  app_state.rs  commands.rs  lib.rs  main.rs  menu.rs  query_guard.rs  sql_helpers.rs  sql_logging.rs
src-tauri/src/ai/: client.rs  config.rs  mod.rs  prompts.rs
src-tauri/src/commands/: connection.rs  query.rs  rows.rs  schema.rs  screenshot.rs  transfer.rs
src-tauri/src/engines/: mod.rs  postgres.rs  row_decode.rs  safety.rs  sqlite.rs  traits.rs  turso.rs  turso_stub.rs  types.rs
src-tauri/src/sql_helpers/: counts.rs  create_enum.rs  create_indexes.rs  create_table.rs  create_view.rs  filters.rs  identifiers.rs  mod.rs  rows.rs  tests.rs  values.rs
src-tauri/src/transfer/: csv.rs  export.rs  import.rs  json.rs  mod.rs  sql.rs
src-tauri/tests/: README.md  engine_registry_tests.rs  sqlite_engine_tests.rs  turso_engine_tests.rs  types_tests.rs
src/components/: AiPanel.tsx  AlertModal.tsx  ConnectionDialog.tsx  CreateEnum.tsx  CreateTable.tsx  CreateView.tsx  DatabaseBar.tsx  DropTableDialog.tsx  EditConnectionDialog.tsx  EditTable.tsx  EmptyTabScreen.tsx  EnumDetail.tsx  LogDrawer.tsx  QueryEditor.tsx  QuickSearch.tsx  SavedQueriesSection.tsx  SavedQueryDialog.tsx  SchemaVisualization.tsx  SettingsModal.tsx  Sidebar.tsx  SidebarObjectSection.tsx  StatusBar.tsx  TabBar.tsx  TableStructure.tsx  TableView.tsx  ToastViewport.tsx  TopBar.tsx  TruncateTableDialog.tsx  TypeParameterFields.tsx  WelcomeScreen.tsx
src/components/TableView/: CellInput.tsx  EnumValueSelect.tsx  FilterPanel.tsx  NewRowInputs.tsx  RowInspector.tsx  TableRows.tsx  index.tsx  types.ts  utils.ts
src/components/TableView/hooks/: useCellEditing.ts  useDeleteRows.ts  useFilters.ts  useNewRow.ts  useTableData.ts
src/components/ai-panel/: GenerationResult.tsx  PromptComposer.tsx  SchemaContextCard.tsx  SuggestionList.tsx  types.ts
src/components/app/: ActiveTabContent.tsx  ConnectionRestoreLoading.tsx
src/components/create-table/: ColumnRow.tsx  ColumnsSection.tsx  ConstraintsSection.tsx  useCreateTableSqlPreview.ts  validation.ts
src/components/edit-table/: Sections.tsx  shared.ts
src/components/query-editor/: EditorPane.tsx  ResultsPane.tsx  types.ts
src/components/schema-visualization/: SchemaVisualization.tsx
src/components/schema-visualization/components/: ConstraintDot.tsx  LegendBar.tsx  SchemaRelationshipLayer.tsx  SchemaScreenshotPreview.tsx  SchemaTableCard.tsx  SchemaVisualizationToolbar.tsx  SchemaVisualizationViewport.tsx
src/components/schema-visualization/hooks/: useRelationshipLayout.ts  useSchemaScreenshot.ts  useSchemaViewport.ts  useVisualizedTables.ts
src/components/schema-visualization/lib/: constants.ts  helpers.ts  screenshot.ts  types.ts
src/components/settings-modal/: AboutSettings.tsx  AiSettings.tsx  AppearanceSettings.tsx  DeveloperSettings.tsx  GeneralSettings.tsx  KeybindingsSettings.tsx  SettingsSidebar.tsx  constants.tsx  index.tsx  types.ts
src/components/ui/: DateTimePicker.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  popover.tsx  scroll-area.tsx  select.tsx  tabs.tsx  tooltip.tsx
src/features/table-transfer/: ImportConfirmDialog.tsx  constants.ts  dialogs.ts  state.ts  types.ts  useTableTransfer.ts
src/hooks/: useAppConnectionManager.ts  useAppShellEffects.ts  useDatabaseVersionSync.ts  useGlobalKeybindings.ts  useUpdater.ts
src/lib/: aiKeyStore.ts  codemirrorTheme.ts  connectionDisplay.ts  connectionTokenStore.ts  copy.ts  createTableConstants.ts  databaseObjects.ts  db.ts  dev-performance.ts  formatters.ts  generateCreateTableSQL.ts  highlightSQL.tsx  queryGuard.ts  quickSearch.ts  sampleData.ts  savedQueries.ts  schemaFlags.ts  sidebarTablePinning.ts  sql-helpers.ts  tableName.ts  typeDisplay.ts
src/lib/sql/: columnTypes.ts  identifiers.ts  values.ts
src/store/: constants.ts  helpers.ts  storage.ts  types.ts  useAppStore.ts
src/store/slices/: aiSlice.ts  connectionSlice.ts  savedQueriesSlice.ts  shared.ts  tabsSlice.ts  uiSlice.ts
tests/: create-table-index-validation.test.ts  query-guard-cursor.test.ts  quick-search.test.ts  sidebar-table-pinning.test.ts  table-transfer-state.test.ts
