[package]
name = "vibe-db"
version = "0.2.3"
description = "Open source database management app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vibe_db_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-store = "2.4.2"
tauri-plugin-stronghold = "2.3.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rust-argon2 = "1.0.0"

[dev-dependencies]
tokio-test = "0.4"

