[package]
name = "vibe-db"
version = "0.3.0"
description = "Open source database management app"
authors = ["Rithprohos"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vibe_db_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-store = "2.4.2"
tauri-plugin-stronghold = "2.3.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rust-argon2 = "1.0.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
libsql = "0.9.5"

[dev-dependencies]
tokio-test = "0.4"

# Recommended optimizations for huge debug folders
[profile.dev]
opt-level = 0
debug = 1 # line tables only (speeds up linking and shrinks folder)
split-debuginfo = "unpacked" # macOS specific space saver

[profile.dev.package."*"]
opt-level = 2 # Build all dependencies with optimizations (reduces their artifact size)

[profile.dev.package.scrypt]
opt-level = 3
