[package]
name = "vibe-db"
version = "0.4.2"
description = "Open source database management app"
authors = ["Rithprohos"]
license = "Apache-2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vibe_db_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "tls-rustls", "chrono", "uuid"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-store = "2.4.2"
tauri-plugin-stronghold = "2.3.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rust-argon2 = "1.0.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
urlencoding = "2.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[target.'cfg(not(windows))'.dependencies]
libsql = "0.9.5"

[dev-dependencies]
tokio-test = "0.4"

# Recommended optimizations for huge debug folders
[profile.dev]
opt-level = 0
debug = 1 # line tables only (speeds up linking and shrinks folder)
split-debuginfo = "unpacked" # macOS specific space saver
# Incremental compilation can bloat target folder; disable if space is critical
# incremental = false

[profile.dev.package."*"]
opt-level = 2 # Build all dependencies with optimizations (reduces their artifact size)

# Aggressive optimizations for heavy dependencies to reduce artifact size
[profile.dev.package.sqlx]
opt-level = 2
[profile.dev.package.sqlx-core]
opt-level = 2
[profile.dev.package.sqlx-macros]
opt-level = 2
[profile.dev.package.tokio]
opt-level = 2
[profile.dev.package.libsql]
opt-level = 2
[profile.dev.package.libsql-ffi]
opt-level = 2
[profile.dev.package.scrypt]
opt-level = 3

# Smaller release binaries
[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
